Fixed content being hidden when scrollbar is shown

--- a/styles/grunt-manager.less
+++ b/styles/grunt-manager.less
@@ -115,6 +115,7 @@
 
   .output-view {
     height: 100%;
+    flex: 1;
 
     .content-container {
       display: flex;
